--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     
-    <title>Al's Power Washing - Professional Pressure Washing Services in Milwaukee</title>
+    <title>Al's Pressure Washing - Professional Pressure Washing Services in Milwaukee</title>
   </head>
   <body>
     <div id="root"></div>
