--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Al's Power Washing - Professional pressure washing services in Milwaukee, Wisconsin. Specializing in driveways, sidewalks, and patios." />
     <meta name="keywords" content="power washing, pressure washing, Milwaukee, Wisconsin, driveway cleaning, sidewalk cleaning, patio cleaning" />
